--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "numfu-lang"
 version = "0.1.1"
 description = "The NumFu programming language"
-authors = [{ name = "Raphael Engel", email = "hello@alpharee.de" }]
+authors = [{ name = "Raphael", email = "hello@alpharee.de" }]
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.10"
